# whisper-web

./: .gitignore  Dockerfile  Makefile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: main.py  requirements.txt  whisper_worker_entry.py  worker.py
app/static/: app.js  index.html  style.css
