[project]
name = "whisper-web"
version = "0.1.0"
description = "GPU-accelerated self-hosted audio/video transcription via faster-whisper"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "faster-whisper",
    "opencc-python-reimplemented",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["app"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["worker"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
